Corrigé les warnings de IDE